appId: com.anonymous.client
---
- launchApp
- tapOn:
    point: '66%,71%'
- tapOn: ' Directions'
- tapOn: 'Current location'
- tapOn:
    point: '38%,17%'
- tapOn:
    point: '46%,48%'
