appId: com.anonymous.client
---
- tapOn: 'Start location'
- inputText: '7141 Sherbrooke Street West'
- tapOn: '7141 Sherbrooke Street West, Montréal, Quebec H4B 1R6, Canada'
- tapOn: 'End location'
- inputText: '1455 De Maisonneuve Boul E, Montréal, Quebec'
- tapOn: '1455 De Maisonneuve Boul E, Montréal, Quebec H2L 2B2, Canada'
- assertVisible: ' 1h 56m'
- assertVisible: ' 45 min'
- assertVisible: ' 23 min'
- tapOn: 'End location'
- eraseText
- inputText: '1535 Rue Saint Jacques'
- tapOn: '1535 Rue Saint-Jacques, Longueuil, Quebec J4H 3C7, Canada'
- assertVisible: ''
