appId: com.anonymous.client
---
- doubleTapOn:
    point: '50%,50%'
- doubleTapOn:
    point: '50%,50%'
- doubleTapOn:
    point: '50%,50%'
- tapOn:
    point: '50%,48%'
- tapOn: ' Directions'
