appId: com.anonymous.client
---
- doubleTapOn:
    point: '50%,50%'
- doubleTapOn:
    point: '50%,50%'
- assertVisible: ''
- assertVisible: ''
- assertVisible: ''
- tapOn: ''
- tapOn: ' Directions'
- tapOn: ' 2 min'
- tapOn: ''
