appId: com.anonymous.client
---
- tapOn: 'Tasks, tab, 3 of 4'
- tapOn: 'Task name'
- inputText: 'test task 1'
- pressKey: 'enter'
- tapOn: 'Location'
- inputText: 'test location 1'
- pressKey: 'enter'
- tapOn: '+'
- tapOn: 'Task name'
- inputText: 'test task 2'
- pressKey: 'enter'
- tapOn: 'Location'
- inputText: 'test location 2'
- pressKey: 'enter'
- tapOn: '+'
- tapOn: 'Task name'
- inputText: 'test task 3'
- pressKey: 'enter'
- tapOn: 'Location'
- inputText: 'test location 3'
- pressKey: 'enter'
- tapOn: '+'
- assertVisible: 'Tasks'
- assertVisible: 'Task name'
- assertVisible: 'Location'
- assertVisible: '+'
- assertVisible: 'test task 1'
- assertVisible: 'test task 2'
- assertVisible: 'test task 3'
