appId: com.anonymous.client
---
- tapOn: "Tasks, tab, 3 of 4"
- tapOn:
    point: "50%,23%"
- tapOn:
    point: "17%,22%"
- tapOn:
    point: "17%,29%"
- tapOn:
    point: "17%,37%"
